# data-engineering-stuff

./: README.md  pyproject.toml
app/department_analyzer/: department_analyzer.py
app/department_analyzer/data/: employees.csv
app/nyctaxi/: nyctaxi.py
test/department_analyzer/: test_department_analyzer.py
test/department_analyzer/data/: departments.csv
